[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isochrone_map"
description = "Package description"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy"
]

[tool.setuptools.packages.find]
include = ["isochrone_map*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
releases = ["*.md"]
